--- a/index.html
+++ b/index.html
@@ -2,9 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <!-- TODO: Change icon -->
-    <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
-
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <!-- Inter Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
